--- a/log.html
+++ b/log.html
@@ -13,7 +13,7 @@
       <input type="submit" name="" value="login">
       <p>
         _New To devbook!_
-      <a href="next.html">Create Account?</a>   <a href="mailto::yashvimahapatra201@gmail.com">Forgot Password?</a> </p>
+      <a href="next.html">Create Account?</a>   <a href="mailto:yashvimahapatra201@gmail.com">Forgot Password?</a> </p>
 </form>
 <div class="xyz">
 <img class="abc"src ="development.png" alt="">
