--- a/index.html
+++ b/index.html
@@ -2,29 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="xyz.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Sacramento&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/3e04ea76b4.js" crossorigin="anonymous"></script>
+    <title>loginform</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+<form class="box" action="index.html" method="post">
+  <h1>devbook</h1>
+  <input type="text" name="" value="username">
+    <input type="password" name="" value="password">
+      <input type="submit" name="" value="login">
+      <p>
+        _New To devbook!_
+      <a href="next.html">Create Account?</a>   <a href="mailto:yashvimahapatra201@gmail.com">Forgot Password?</a> </p>
+</form>
+<div class="xyz">
+<img class="abc"src ="development.png" alt="">
+</div>
 
 
-    <div class="top">
-      <h1>Dev-Book</h1>
-      <p> Just for developers  </p>
-
-    </div>
-    <div class="search-box">
-      <input class="search-txt" type="text" name="" placeholder="type to search">
-      <a class="search-btn"href="#"><i class="fas fa-search"></i> </a>
-
-    </div>
-    <div>
-        <h3>A developer is an individual that builds and create software and applications. He or she writes, debugs and executes the source code of a software application. A developer is also known as a software developer, computer programmer, programmer, software coder or software engineer.</h3>
-
-<img class="web"src="web.png" alt="">
-
-      </div>
   </body>
 </html>
