--- a/log.html
+++ b/log.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>devboob</title>
+    <title>devbook</title>
     <link rel="stylesheet" href="xyz.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Sacramento&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3e04ea76b4.js" crossorigin="anonymous"></script>
