--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-<form class="box" action="devbook.html" method="post">
+  <form class ="box" action="devbook.html" method="post"enctype="text/plain">
   <h1>devbook</h1>
   <input type="text" name="" value="username">
     <input type="password" name="" value="password">
