--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <form class ="box" action="devbook.html" method="post"enctype="text/plain">
+  <form class ="box" action="mailto:yashvimahapatra201@gmail.com" method="post"enctype="text/plain">
   <h1>devbook</h1>
   <input type="text" name="" value="username">
     <input type="password" name="" value="password">
       <input type="submit" name="" value="login">
       <p>
-        _New To devbook!_
+        <a href="devbook.html">_New To devbook!_ </a>
       <a href="next.html">Create Account?</a>   <a href="mailto:yashvimahapatra201@gmail.com">Forgot Password?</a> </p>
 </form>
 <div class="xyz">
