--- a/devbook.html
+++ b/devbook.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+img {
+  width: 100%;
+  height: auto;
+}
+</style>
     <title>devbook</title>
     <link rel="stylesheet" href="xyz.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Sacramento&display=swap" rel="stylesheet">
@@ -23,7 +29,7 @@
     <div>
         <h3>A developer is an individual that builds and create software and applications. He or she writes, debugs and executes the source code of a software application. A developer is also known as a software developer, computer programmer, programmer, software coder or software engineer.</h3>
 
-<img class="web"src="web.png" alt="">
+<img class="web"src="web.png" width="460" height="345" alt="">
 
       </div>
   </body>
