--- a/devbook.html
+++ b/devbook.html
@@ -17,9 +17,8 @@ img {
   </head>
   <body>
     <div class="top">
-      <h1>Dev-Book</h1>
-      <p> Just for developers  </p>
-
+      <h1 style="font-size:8vw;">Dev-Book</h1>
+<p style="font-size:2vw;">Just for developers </p>
     </div>
     <div class="search-box">
       <input class="search-txt" type="text" name="" placeholder="type to search">
