--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <input type="password" name="" value="password">
       <input type="submit" name="" value="login">
       <p>
-        <a href="devbook.html">_New To devbook!_ </a>
-      <a href="next.html">Create Account?</a>   <a href="mailto:yashvimahapatra201@gmail.com">Forgot Password?</a> </p>
+        <a href="devbook.html">&nbspNew To devbook!&nbsp</a>
+      <a href="next.html">&nbspCreate Account?&nbsp</a>   <a href="mailto:yashvimahapatra201@gmail.com">&nbspForgot Password?&nbsp</a> </p>
 </form>
 <div class="xyz">
 <img class="abc"src ="development.png" alt="">
